@@ -1,6 +1,6 @@
-/**
+/*
  * The MIT License
- * Copyright (c) 2014 Ilkka Seppälä
+ * Copyright © 2014-2021 Ilkka Seppälä
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -20,19 +20,19 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package com.iluwatar.doublechecked.locking;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.locks.Lock;
 import java.util.concurrent.locks.ReentrantLock;
+import lombok.extern.slf4j.Slf4j;
 
 /**
- * 
- * Inventory
- *
+ * Inventory.
  */
+@Slf4j
 public class Inventory {
 
   private final int inventorySize;
@@ -40,7 +40,7 @@ public class Inventory {
   private final Lock lock;
 
   /**
-   * Constructor
+   * Constructor.
    */
   public Inventory(int inventorySize) {
     this.inventorySize = inventorySize;
@@ -49,7 +49,7 @@ public class Inventory {
   }
 
   /**
-   * Add item
+   * Add item.
    */
   public boolean addItem(Item item) {
     if (items.size() < inventorySize) {
@@ -57,8 +57,8 @@ public class Inventory {
       try {
         if (items.size() < inventorySize) {
           items.add(item);
-          System.out.println(Thread.currentThread() + ": items.size()=" + items.size()
-              + ", inventorySize=" + inventorySize);
+          var thread = Thread.currentThread();
+          LOGGER.info("{}: items.size()={}, inventorySize={}", thread, items.size(), inventorySize);
           return true;
         }
       } finally {
@@ -69,12 +69,12 @@ public class Inventory {
   }
 
   /**
-   * Get all the items in the inventory
+   * Get all the items in the inventory.
    *
    * @return All the items of the inventory, as an unmodifiable list
    */
   public final List<Item> getItems() {
-    return Collections.unmodifiableList(items);
+    return List.copyOf(items);
   }
 
 }
